duplicate fix, offence issue datetime more visible

--- a/src/app/fpn/step5/step5.component.scss
+++ b/src/app/fpn/step5/step5.component.scss
@@ -98,7 +98,7 @@
   }
   
   ion-input {
-    --background: #F7F7F7; /* light grey color */
+    // --background: #F7F7F7; /* light grey color */
     --border-radius: 5px;
     --border-color: black;
     text-align: center; /* align text to the center */
